--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
             <h2>Cat photos</h2>        
             <!--add link to cat photos-->
             <p>Click here to view more 
-                <a href="https://catphotos.com" target="_blank">cat photos</a>.</p>
+                <a href="#" target="_blank">cat photos</a>.</p>
             <img src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back">
         </main>
     </body>
