--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             <!--add link to cat photos-->
             <p>Click here to view more 
                 <a href="#" target="_blank">cat photos</a>.</p>
-            <img src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back">
+            <a href="#"><img src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back"></a>
         </main>
     </body>
 </html>
