--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
             <p>Click here to view more 
                 <a href="#" target="_blank">cat photos</a>.</p>
             <a href="#"><img src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back"></a>
+            <h3>Cat lists</h3>
+            <p>Things cats love:</p>
+            <ul>
+                <li>catnip</li>
+                <li>laser pointers</li>
+                <li>canned tuna</li>
+            </ul>
+            <img src="/imgs/canned_tuna.jpg" alt="Canned tuna">
+            <p>Things cats hate:</p>
+            <ol>
+                <li>flea treatment</li>
+                <li>thunder</li>
+                <li>other cats</li>
+            </ol>
+            <img src="/imgs/cats.jpg" alt="Cats">
         </main>
     </body>
 </html>
